Fixed wrapping on console output

--- a/stylesheets/console.css
+++ b/stylesheets/console.css
@@ -45,6 +45,10 @@ article.wrapper {
     text-align: left;
 }
 
+#console-output pre {
+    white-space: pre-wrap;
+}
+
 
 #console {
     padding: 8px 15px;
